style.css
html,
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-align: center;
  min-height: 100vh;
}

.grid-container{
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(6,1fr);
  grid-row: 1fr 3fr;
  padding:20px;
  font-weight: bold;
  font-size: 1.2rem;

}

.bg-img{
    background-image: url('https://images.unsplash.com/photo-1620301598483-f872a86a58af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1644&q=80');
    background-size: cover;
    background-repeat: no-repeat;
    min-height:100%;
    width: 100%;
    position: absolute;
    top:0px;
    left:0px;
    z-index: -10;
    filter: blur(4px);
    -webkit-filter: blur(4px);
}

/* header */
header {
  grid-column: 2/6;
  background-color: #012a2aa0;
  padding:2rem;
  width: 100%;
  border: 3px solid #2b3c3cb2;
  color:white;
}


header h1{
    color:white;
}
header form { 
    margin-bottom: 20px;
}

/* main */
main {

    grid-column: 3/5;
    width: 100%;
    padding: 10px;
    /* background-color: rgba(200,200,200, 0.5);
    color: ; */
}

/* weather display */
#display-weather { 
    border:2px solid green;

}

.forecast{
    display:grid;
    grid-template-columns: repeat(3,1fr);
}

.forecast article { 
    width: 100%;
}

.hide {
    display: none;
}

.right{
    text-align: left;
    padding:20px;
}

ul{
    text-align: left;
}

li{
    margin-bottom:8px;
}

.left-aside {
    grid-column: 2/3;
    text-align:left;
    padding:20px;
}

.left-aside input { 
    margin-top: 20px;
}

.logo{
    mix-blend-mode: multiply;
}

